# datatalk_ml_zoomcamp_25

./: .gitignore  README.md
01-intro/: Homework Module 1.ipynb  README.md
02-regression/: Homework Module 2.ipynb  README.md
03-classification/: Homework Module 3.ipynb  README.md
04-evaluation/: Homework Module 4.ipynb  README.md
05-deployment/: Dockerfile  Homework Module 5.ipynb  README.md  predict.py  pyproject.toml  test.py
Udacity-AWS-GenAI/: AWS Generative AI.ipynb
