[project]
name = "05-deployment"
version = "0.1.0"
description = "Module 5 Homework - Predict Customer Subscription"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.1",
    "scikit-learn==1.6.1",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "requests>=2.32.5",
]
